<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="8dp"
    android:layout_marginBottom="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/plant_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/action_settings"
            android:scaleType="fitCenter"
            android:src="@drawable/rose"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/plant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plant_photo"
            android:gravity="center"
            android:text="@string/plant_name"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/plant_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/plant_type"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/plant_name"
            android:textColor="@color/accent_material_light"
            tools:ignore="PrivateResource" />

        <TextView
            android:id="@+id/textViewOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/_8942"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_alignParentEnd="true"
            android:paddingStart="@dimen/activity_horizontal_margin"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

</android.support.v7.widget.CardView>