<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisplayActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:tint="@android:color/white"
        app:backgroundTint="@color/primary_dark_material_light_1"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="336dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="64dp"
        android:text="@string/your_plant"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/primary_dark_material_light_1"
        app:fontFamily="@font/orienta"
        app:layout_constraintBottom_toTopOf="@+id/plant_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="182dp">

        <ImageView
            android:id="@+id/plant_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/primary_dark_material_light_1"
                android:textSize="20sp"
                app:fontFamily="@font/orienta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.57" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
        android:id="@+id/plant_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/text"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/primary_dark_material_light_1"
        app:fontFamily="@font/orienta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plant_type"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/primary_dark_material_light_1"
                    android:textSize="20sp"
                    app:fontFamily="@font/orienta"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.57" />
                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

        <TextView
            android:id="@+id/plant_type"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/text"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/primary_dark_material_light_1"
            app:fontFamily="@font/orienta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/timeCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Day Added:"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/primary_dark_material_light_1"
                android:textSize="20sp"
                app:fontFamily="@font/orienta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.57" />
            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/plant_creation"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/text"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/primary_dark_material_light_1"
                app:fontFamily="@font/orienta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.57"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/lastWatered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_watered"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/primary_dark_material_light_1"
                android:textSize="20sp"
                app:fontFamily="@font/orienta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.57" />
            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/plant_watered"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/text"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/primary_dark_material_light_1"
                app:fontFamily="@font/orienta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.57"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/if_outside"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/text"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/primary_dark_material_light_1"
                app:fontFamily="@font/orienta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.57"/>


        </LinearLayout>



        <Button
            android:id="@+id/done_plant_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57"
            tools:ignore="ObsoleteLayoutParam,UnusedAttribute" />
    </LinearLayout>

</LinearLayout>